welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:32: error: Unmatched closing brace '}' ignored here
}
^